Fix overflow in custom expression suggestions

--- a/frontend/src/metabase/query_builder/components/expressions/Editor/Listbox/Listbox.module.css
+++ b/frontend/src/metabase/query_builder/components/expressions/Editor/Listbox/Listbox.module.css
@@ -27,6 +27,8 @@
 
 .label {
   white-space: pre;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .highlight {
